# XSeasonsDetect

./: .gitignore  README.md  environment.yaml  pyproject.toml  setup.py  setup_bk.py
notebooks/: 01_project_introduction.ipynb  02_regional_literature.ipynb  03_optimal_number_seasons.ipynb  04_clustering.ipynb  04_clustering_results.ipynb  04bis_clustering_BRUTAL.ipynb  05_results_comparison.ipynb  06_perceptron.ipynb  07_clustering_projections.ipynb  A01_data_preprocessing_literature.ipynb  A02_data_preprocessing_ERA5 copy.ipynb  A02_data_preprocessing_ERA5.ipynb  A031_bias_correction_cdo.sh  A03_data_preprocessing_CMIP6.ipynb  A04_exploring_methods.ipynb  A05_test.ipynb  A1_data_preprocessing.ipynb  conftest.py  pro.ipynb
src/models/: BRUTAL_X_RCC.py  BRUTAL_radially_constrained_cluster.py  X_RCC.py  __init__.py  bk.py  classifier.py  deterministic_X_RCC.py  deterministic_radially_constrained_cluster.py  radially_constrained_cluster.py
src/preprocessing/: netcdf_preprocess_CDO.py
src/scripts/: __init__.py  clustering.py  clustering_bk.py  initialize_project.py  preprocess_CMIP6_data.py  preprocess_ERA5_data.py  project.py  project_all_days.py  project_bk_bk.py  project_explore.py
src/visualization/: __init__.py  custom_plots.py  visual_cluster_results.py
tutorials/: 03_optimal_number_seasons.ipynb  04_clustering.ipynb  04bis_clustering_BRUTAL.ipynb  08_linear_regressor.ipynb  A04_exploring_methods.ipynb  A04_exploring_methods_open_meteo.ipynb  prep_wind.ipynb
