[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "XSeasonDetect"
version = "0.1"
description = "A brief description of your project"  # Add a brief description
readme = "README.md"  # Link to your README file
authors = [
    { name = "Jacopo Grassi", email = "jacopo.grassi@polito.it" }
]

[project.scripts]
XSeas_newproj = "src.scripts.initialize_project:main"  # Ensure this points to the correct function