[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "XSeasonDetect"
version = "0.1"
description = "A brief description of your project"  # Add a brief description
readme = "README.md"  # Link to your README file
authors = [
    { name = "Jacopo Grassi", email = "jacopo.grassi@polito.it" }
]

[project.scripts]
XSeas_newproj = "scripts.initialize_project:main"  # Ensure this points to the correct function
XSeas_preprocessERA = "scripts.preprocess_ERA5_data:main"
XSeas_preprocessCMIP = "scripts.preprocess_CMIP6_data:main"
XSeas_cluster = "scripts.clustering:main"
XSeas_project = "scripts.project:main"
XSeas_project_days = "scripts.project_all_days:main"
XSeas_project_explore = "scripts.project_explore:main"